--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,107 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 500px;
+  margin: auto;
+  vertical-align: middle;
+}
+.App {
+  border: 1px solid;
+  padding: 32px;
+  border-radius: 84px;
+  background: lightgoldenrodyellow;
+  margin-top: 30px;
+}
+.outer-div {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: lightgray;
+  margin: auto;
+  padding: 5px;
+  margin-top: 20px;
+}
+#inner-div {
+  width: 50%;
+  height: 50%;
+  margin: auto;
+  margin-top: 25%;
+  border-radius: 50%;
+  background-color: gray;
+  cursor: pointer;
+}
+#menu {
+  position: absolute;
+  left: 76px;
+  top: 5px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#forward {
+  position: absolute;
+  top: 76px;
+  left: 20px;
+  cursor: pointer;
+}
+#backward {
+  position: absolute;
+  left: 165px;
+  top: 75px;
+  cursor: pointer;
+}
+#play-pause {
+  position: absolute;
+  top: 159px;
+  left: 86px;
+  cursor: pointer;
+}
+#nav-btns {
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  border-radius: 50%;
+}
+#screen {
+  position: relative;
+  width: 350px;
+  height: 350px;
+  margin: auto;
+  border: 3px solid black;
+  background-color: aliceblue;
+  display: flex;
+  justify-content: space-between;
+}
+.menu-screen{
+  display: flex;
+  justify-content: space-between;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+li {
+  margin: 7px;
+  font-size: x-large;
+  font-weight: 600;
+  padding: 11px 1px;
+  display: flex;
+  justify-content: space-between;
+}
+/* .hidden {
+  display: none;
+} */
+.high-light {
+  background-color: rgb(77, 77, 243);
+  color: aliceblue;
+  margin: 7px 0px;
+  width: 170px;
+}
+.other-menu-style {
+  margin: auto;
+  font-size: 40px;
+  font-weight: 600;
+  text-align: center;
 }
