--- a/src/musicPlay.css
+++ b/src/musicPlay.css
@@ -1,3 +1,4 @@
+/* CSS for only All songs page */
 .component {
     width: 350px;
     background-image: linear-gradient(45deg,rgb(61, 245, 61), red, yellow);
